--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
     <body>
         <h1>Understanding Git</h1>
-        <h1>Example:3</h1>
+        <h1>Example:4</h1>
         <p style="color:red">Source version control</p>
         <button>Book Now</button>
+        <button>Apply Now</button>
     </body>
 </html>
