Created Signup Button

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
         <p style="color:red">Source version control</p>
         <button>Book Now</button>
         <button>Apply Now</button>
+        <button>SignUp Now</button>
     </body>
 </html>
