Created a button called Learn More

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <button>Book Now</button>
         <button>Apply Now</button>
         <button>SignUp Now</button>
+        <button>Learn More</button>
     </body>
 </html>
